--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,19 +1,18 @@
 version: '3.8'
 
 services:
-  database:
-    container_name: database
-    image: mysql:8.0
-    command: --default-authentication-plugin=mysql_native_password
+  db:
+    container_name: db
+    image: postgres:14-alpine
     environment:
-      MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: symfony_docker
-      MYSQL_USER: symfony
-      MYSQL_PASSWORD: symfony
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: docker_symfony
+      POSTGRES_USER: root
+      PGDATA: /var/lib/pg_data
     ports:
-      - '4306:3306'
+      - 15432:5432
     volumes:
-      - ./mysql:/var/lib/mysql
+      - ./postgres:/var/lib/postgresql/data
     networks:
       - symfony
 
@@ -26,7 +25,7 @@ services:
     volumes:
       - ../app:/var/www/symfony_docker
     depends_on:
-      - database
+      - db
     networks:
       - symfony
 
